force-app/main/default/objects/BOT_Inactive_Account__c/BOT_Inactive_Account__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This object is created by BusinessOne Technologies Inc. It is used to  hold the Inactive Accounts which are deleted from PBB.</description>
    <label>Inactive Accounts</label>
</CustomObject>