force-app/main/default/objects/BOT_Inactive_Account__c/fields/BOT_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account_Status__c</fullName>
    <description>To hold the Account status i.e. Inactive/Deleted.</description>
    <label>Account Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>