force-app/main/default/objects/BOT_Inactive_Account__c/fields/BOT_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>BOT_Account_Type__c</fullName>
    <description>To hold the BOT Account type</description>
    <label>Account Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>