force-app/main/default/objects/BOT_Inactive_Account__c/fields/BOT_Entity_ID__c.field-meta.xml
<CustomField>
    <fullName>BOT_Entity_ID__c</fullName>
    <description>To hold the BOT Entity ID.</description>
    <label>Entity ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>